--- a/WeatherMonitoringSystem.csproj
+++ b/WeatherMonitoringSystem.csproj
@@ -4,10 +4,14 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
 	  <ImplicitUsings>enable</ImplicitUsings>
-	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-	  <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="TestWeatherMonitoringSystem\**" />
+    <EmbeddedResource Remove="TestWeatherMonitoringSystem\**" />
+    <None Remove="TestWeatherMonitoringSystem\**" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AutoFixture" Version="4.18.1" />
@@ -17,8 +21,6 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-		<PackageReference Include="Moq" Version="4.20.70" />
-		<PackageReference Include="xunit" Version="2.8.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -27,8 +29,5 @@
 		</None>
 	</ItemGroup>
 	
-	<ItemGroup>
-		<Using Include="Xunit" />
-	</ItemGroup>
-	
+
 </Project>
